--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "hardhat-project",
   "devDependencies": {
     "hardhat": "^2.22.4"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
