--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "hardhat": "^2.22.4"
   },
   "dependencies": {
+    "@celo/contractkit": "^8.0.0",
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "web3": "^4.9.0"
   }
 }
