--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@celo/contractkit": "^8.0.0",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5",
     "web3": "^4.9.0"
